--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rm -rf ./dist/ && mkdir ./dist",
-
-    "build:js": "DEBUG=true browserify ./src/index.js -t babelify > ./dist/index.js",
+    "build:styles": "lessc ./src/styles/styles.less ./dist/styles.css",
+    "make:styles": "lessc ./src/styles/styles.less | cleancss > ./dist/styles.css",
+    "build:js": "browserify ./src/index.js -t babelify > ./dist/index.js",
     "make:js": "browserify ./src/index.js -t babelify | uglifyjs > ./dist/index.js",
-
-    "build:html": "html-minifier --collapse-whitespace ./src/index.html --output ./dist/index.html",
-    "build": "npm run build:html && npm run build:js"
+    "build:html": "html-minifier ./src/index.html --output ./dist/index.html",
+    "make:html": "html-minifier --collapse-whitespace ./src/index.html --output ./dist/index.html",
+    "build": "npm run build:html && npm run build:js && npm run build:styles",
+    "make": "npm run build:js && npm run make:html && npm run make:styles"
   },
   "repository": {
     "type": "git",
@@ -33,7 +35,9 @@
   "devDependencies": {
     "babelify": "^6.3.0",
     "browserify": "^11.1.0",
+    "clean-css": "^3.4.3",
     "html-minifier": "^0.7.2",
+    "less": "^2.5.1",
     "uglify-js": "^2.4.24"
   }
 }
