added watchify and watch task for styling

--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rm -rf ./dist/ && mkdir ./dist",
+    "watch:styles": "watch 'npm run build:styles' ./src/styles",
     "build:styles": "lessc ./src/styles/styles.less ./dist/styles.css",
     "make:styles": "lessc ./src/styles/styles.less | cleancss > ./dist/styles.css",
+    "watch:js": "watchify ./src/index.js -t babelify -o ./dist/index.js -v",
     "build:js": "browserify ./src/index.js -t babelify > ./dist/index.js",
     "make:js": "browserify ./src/index.js -t babelify | uglifyjs > ./dist/index.js",
     "build:html": "html-minifier ./src/index.html --output ./dist/index.html",
     "make:html": "html-minifier --collapse-whitespace ./src/index.html --output ./dist/index.html",
+    "watch": "parallelshell 'npm run watch:styles' 'npm run watch:js'",
     "build": "npm run build:html && npm run build:js && npm run build:styles",
     "make": "npm run build:js && npm run make:html && npm run make:styles"
   },
@@ -38,6 +41,9 @@
     "clean-css": "^3.4.3",
     "html-minifier": "^0.7.2",
     "less": "^2.5.1",
-    "uglify-js": "^2.4.24"
+    "parallelshell": "^2.0.0",
+    "uglify-js": "^2.4.24",
+    "watch": "^0.16.0",
+    "watchify": "^3.4.0"
   }
 }
