removed htmlminifier and added html watch, also updated readme

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "watch:js": "watchify ./src/index.js -t babelify -o ./dist/index.js -v",
     "build:js": "browserify ./src/index.js -t babelify > ./dist/index.js",
     "make:js": "browserify ./src/index.js -t babelify | uglifyjs > ./dist/index.js",
-    "build:html": "html-minifier ./src/index.html --output ./dist/index.html",
-    "make:html": "html-minifier --collapse-whitespace ./src/index.html --output ./dist/index.html",
-    "watch": "parallelshell 'npm run watch:styles' 'npm run watch:js'",
+    "watch:html": "watch 'npm run build:html' ./src/html",
+    "build:html": "cp ./src/html/*.html ./dist/",
+    "make:html": "npm run build:html",
+    "watch": "parallelshell 'npm run watch:styles' 'npm run watch:js' 'npm run watch:html'",
     "build": "npm run build:html && npm run build:js && npm run build:styles",
     "make": "npm run build:js && npm run make:html && npm run make:styles"
   },
@@ -39,7 +40,6 @@
     "babelify": "^6.3.0",
     "browserify": "^11.1.0",
     "clean-css": "^3.4.3",
-    "html-minifier": "^0.7.2",
     "less": "^2.5.1",
     "parallelshell": "^2.0.0",
     "uglify-js": "^2.4.24",
